[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/bonfire.png" type="Texture" id=1]
[ext_resource path="res://src/Bonfire/Bonfire.gd" type="Script" id=2]
[ext_resource path="res://assets/consume.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/HealArea/HealArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/flame_base_100-75hp.png" type="Texture" id=5]
[ext_resource path="res://assets/fame_core_100-75hp.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.18478, 8.36995 )

[sub_resource type="CircleShape2D" id=2]
radius = 9.8217

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0790191, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 0.5
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.2
initial_velocity_random = 0.1
angular_velocity = 25.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.2
linear_accel_random = 1.0
scale_random = 0.8
scale_curve = SubResource( 5 )
color = Color( 0.862745, 0.447059, 0.101961, 1 )
anim_speed = 0.2
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0790191, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.01
emission_shape = 1
emission_sphere_radius = 0.05
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.1
angular_velocity = 0.5
angular_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.1
linear_accel_random = 1.0
scale_random = 0.8
scale_curve = SubResource( 10 )
color = Color( 0.980392, 0.666667, 0, 1 )
anim_speed = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Bonfire" type="Area2D"]
collision_layer = 0
collision_mask = 33
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.397297, -5.12568 )
shape = SubResource( 1 )

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 7, -4 )

[node name="LitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HealArea" parent="." instance=ExtResource( 4 )]
HEAL_PER_TICK = 10
ACTIVE = false

[node name="CollisionShape2D" parent="HealArea" index="0"]
position = Vector2( 0, -3.5 )
shape = SubResource( 2 )

[node name="ParticlesBase" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -9 )
emitting = false
amount = 2
lifetime = 0.5
randomness = 1.0
fixed_fps = 24
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="PartcilesCore" type="Particles2D" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -8 )
emitting = false
amount = 2
lifetime = 0.5
randomness = 0.8
fixed_fps = 24
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Bonfire_body_entered"]

[editable path="HealArea"]
